--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,18 @@
                             <h2 class="text-uppercase">Contact details</h2>
                             <p class="fw-bold"><i class="far fa-address-card"></i>Address</p>
                             <p>19 Fountain Park</p>
-                            <p>AB45 1JS Banff</p>
+                            <p>AB45 1JS Banff <!DOCTYPE html>
+                            <html lang="en">
+                            <head>
+                                <meta charset="UTF-8">
+                                <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                                <title>Document</title>
+                            </head>
+                            <body>
+                                
+                            </body>
+                            </html></p>
                             <p class="fw-bold"><i class="fas fa-phone-alt"></i>Mobile phone</p>
                             <p>+44 7591934201</p>
                             <p class="fw-bold">e-mail</p>
