--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
     <main>
         <section class="top-hero contact-hero">
             <!-- <div class="container h-100 d-flex flex-column justify-content-center"> -->
-                <p class="top-hero-text text-light ">Contact</p>
-               <div class="hero-shadow"></div>               
+            <p class="top-hero-text text-light ">Contact</p>
+            <div class="hero-shadow"></div>
 
             <!-- </div> -->
 
@@ -47,7 +47,7 @@
             <div class="container text-center">
 
                 <h1>Write to us!</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                <p>Odpowiadamy bardzo szybko</p>
 
 
                 <div class="row">
@@ -56,18 +56,23 @@
                             <h2 class="text-uppercase">Contact details</h2>
                             <p class="fw-bold"><i class="far fa-address-card"></i>Address</p>
                             <p>19 Fountain Park</p>
-                            <p>AB45 1JS Banff <!DOCTYPE html>
-                            <html lang="en">
-                            <head>
-                                <meta charset="UTF-8">
-                                <meta http-equiv="X-UA-Compatible" content="IE=edge">
-                                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                                <title>Document</title>
-                            </head>
-                            <body>
-                                
-                            </body>
-                            </html></p>
+                            <p>AB45 1JS Banff
+                                <!DOCTYPE html>
+                                <html lang="en">
+
+                                <head>
+                                    <meta charset="UTF-8">
+                                    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+                                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                                    <title>Document</title>
+                                </head>
+
+                                <body>
+
+                                </body>
+
+                                </html>
+                            </p>
                             <p class="fw-bold"><i class="fas fa-phone-alt"></i>Mobile phone</p>
                             <p>+44 7591934201</p>
                             <p class="fw-bold">e-mail</p>
